First draft of game. No debugging so far, but all the ideas are there.

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,10 @@ dist/README-freetype.txt
 dist/README-harfbuzz.txt
 dist/game.ilk
 dist/game.pdb
+dist/client.ilk
+dist/client.pdb
+dist/server.ilk
+dist/server.pdb
 dist/SDL2.dll
 dist/game
 dist/game.exe
